--- a/app/src/main/res/layout/ftp_widget_layout.xml
+++ b/app/src/main/res/layout/ftp_widget_layout.xml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="8dp"
-    android:background="@android:drawable/dialog_holo_light_frame"> <TextView
-        android:id="@+id/widget_status_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/widget_text_stopped"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="?android:attr/textColorPrimary"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
-         android:paddingStart="4dp"
-         android:paddingEnd="4dp"/>
+    android:padding="0dp">
 
-    <Button
+    <ImageButton
         android:id="@+id/widget_toggle_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="60dp"
-        android:text="@string/widget_start"
-        android:layout_gravity="center_vertical"
-        android:textSize="12sp"/>
+        android:layout_width="64dp"  android:layout_height="64dp" android:layout_gravity="center"
+        android:padding="4dp" android:scaleType="fitCenter"
+        android:background="@drawable/widget_background_rounded_black"
+        android:src="@drawable/ic_widget_play"
+        android:contentDescription="@string/app_name"
+        android:clickable="true"
+        android:focusable="true" />
 
-</LinearLayout>
+</FrameLayout>
