changed widget color and removed app from app name

--- a/app/src/main/res/drawable/ic_widget_stop.xml
+++ b/app/src/main/res/drawable/ic_widget_stop.xml
@@ -8,41 +8,41 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#90ee90"
+      android:strokeColor="#04e762"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M43.5,18.295H4.5v18.72a2.18,2.18 0,0 0,2.16 2.2l0.01,0H41.32a2.18,2.18 0,0 0,2.18 -2.18l0,-0.02Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#90ee90"
+      android:strokeColor="#04e762"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M26.534,30.484a3.939,3.939 0,0 0,-5.032 -0.014v0.014"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#90ee90"
+      android:strokeColor="#04e762"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M24.008,32.096a1.579,1.579 0,1 0,1.579 1.579h0A1.579,1.579 0,0 0,24.008 32.096Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#90ee90"
+      android:strokeColor="#04e762"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M28.936,27.753a7.744,7.744 0,0 0,-9.856 0"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#90ee90"
+      android:strokeColor="#04e762"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M31.304,24.887a11.45,11.45 0,0 0,-14.608 0"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#90ee90"
+      android:strokeColor="#04e762"
       android:strokeLineCap="round"/>
 </vector>
